cleaned up code

--- a/census_data/nyc/notebooks/demographic_final.ipynb
+++ b/census_data/nyc/notebooks/demographic_final.ipynb
@@ -821,6 +821,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nta_id': 'BK0101',\n",
+       " 'num_agents': 37518,\n",
+       " 'race_prob': [0.147, 0.727, 0.025, 0.0, 0.06199999999999999, 0.039],\n",
+       " 'age_gender_prob': [0.06,\n",
+       "  array([0.072]),\n",
+       "  0.08,\n",
+       "  array([0.1]),\n",
+       "  0.15,\n",
+       "  array([0.159]),\n",
+       "  0.07,\n",
+       "  array([0.082]),\n",
+       "  0.06,\n",
+       "  array([0.064]),\n",
+       "  0.04,\n",
+       "  array([0.064])],\n",
+       " 'education_prob': [0.18614058906652628,\n",
+       "  0.48399878085949405,\n",
+       "  0.18192901277326756,\n",
+       "  0.14793161730071208],\n",
+       " 'insurance_employ_prob': [0.749547983310153,\n",
+       "  0.06442976356050069,\n",
+       "  0.05027816411682893,\n",
+       "  0.016307371349095965,\n",
+       "  0.11001390820584145,\n",
+       "  0.009422809457579973]}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_dict['BK0101']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
