--- a/syspop/test_NYC.ipynb
+++ b/syspop/test_NYC.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import sys\n",
     "sys.path.append('/Users/shashankkumar/Documents/GitHub/Syspop/syspop/process')\n",
     "from process.base_pop import base_pop_wrapper\n",
@@ -75,6 +76,22 @@
     "\n",
     "base_population,base_address = base_pop_wrapper(input_data=file_dict['valid_ntas'],input_mapping=file_dict['mapping'],use_parallel=True,n_cpu=8)\n",
     "base_population.to_pickle(output_dir + \"/base_population.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load Base Population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_pop = pd.read_pickle(output_dir + \"/base_population.pkl\")"
    ]
   },
   {
